update not found

--- a/src/app/Components/Notes/notes-list/notes-list.component.html
+++ b/src/app/Components/Notes/notes-list/notes-list.component.html
@@ -159,7 +159,7 @@
           </div>
         </div>
       </div>
-      <p *ngIf="!notes || notes.length <= 0">Not Notes Found</p>
+      <p style="padding-top: 10px;" *ngIf="!notes || notes.length <= 0">Not Notes Found</p>
       
     </div>
 
