--- a/src/app/Components/Tags/tags-list/tags-list.component.html
+++ b/src/app/Components/Tags/tags-list/tags-list.component.html
@@ -60,7 +60,7 @@
                     </tbody>
                 </table>
             </div>
-            <p *ngIf="!tags || tags.length <= 0">Not Tags Found</p>
+            <p style="padding-top: 10px; text-align: center;" *ngIf="!tags || tags.length <= 0">Not Tags Found</p>
 
         </div>
     </div>
