--- a/src/app/Components/Reminders/reminders-list/reminders-list.component.html
+++ b/src/app/Components/Reminders/reminders-list/reminders-list.component.html
@@ -85,7 +85,7 @@
           </div>
         </ul>
       </div>
-      <p *ngIf="!reminders || reminders.length <= 0">Not Reminder Found</p>
+      <p style="padding-top: 10px;" *ngIf="!reminders || reminders.length <= 0">Not Reminder Found</p>
 
     </div>
 
